# resilient-info-kit

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_MINIMIZATION.md  LICENSE  MANIFEST.md  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
src/resilient_info_kit/: __init__.py  cli.py  deploy.py  model.py  simulate.py
tests/: __init__.py  test_cli.py  test_deploy.py  test_model.py  test_simulate.py
